packages/taquito-michel-codec/test/contracts_011/ill_typed/view_op_dupable_type.tz
parameter (pair nat address) ;
storage nat ;
code { CAR ; UNPAIR ; VIEW "add" (ticket nat); DROP ; PUSH nat 1 ; NIL operation ; PAIR } ;
